Fix spacing errors

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@
 :root{
     background-image: url(images/camille-brodard-kOAU9SG0VX8-unsplash.jpg);
     background-size: 1920px 1080px;
-
 }
 
 body{
@@ -25,18 +24,18 @@ body{
     flex-direction: column;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    max-width: 960px;
+    max-width: 66%;
 }
 
 .top{
     font-size: 40px;
     flex-wrap: wrap;
-    padding: 50px;
+    padding: 80px;
 }
 
 .bottom{
     font-size: large;
-    padding: 50px;
+    padding: 80px;
 }
 
 form{
@@ -45,7 +44,7 @@ form{
     gap: 20px;
     flex-direction: column;
     font-size: 2rem;
-    padding: 50px;
+    padding: 80px;
     box-shadow: 0px 10px 13px 0px grey;
 }
 
@@ -124,3 +123,56 @@ a{
     font-size: 13px;
     color: red;
 }
+
+
+
+/*
+RESET START
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*
+RESET OVER
+*/
